# EvalHarness

./: .env.example  .gitignore  .pre-commit-config.yaml  LLM_Eval_Harness_Build_Plan.md  Makefile  README.md  V1.1_Hardening_Plan.md  pyproject.toml  thresholds.yaml
.github/workflows/: ci.yml  judged-eval.yml  live-eval.yml
adversarial/: CATALOG.md  FINDINGS.md  grade.py  run.py  test_grade.py  test_redteam.py  toxicity_judge.py
adversarial/payloads/: injection.json  jailbreak.json  leak.json  toxicity.json
agent_tests/: fakes.py  test_live_tool_choice.py  test_reliability.py  test_trace.py  trace.py
app/: agent.py  ingest.py  rag.py  retriever.py  schema.py  test_agent_structure.py  tools.py
app/corpus/: 01_company_overview.md  02_products.md  03_operations_safety.md  README.md
app/vectorstore/: index.faiss  index.pkl
docs/: COST.md  WRITEUP.md  determinism_run.txt
evals/: README.md  dataset.jsonl  dataset.py  determinism_experiment.py  history.py  judge.py  metrics.py  push_to_langsmith.py  record_history.py  regression_demo.py  runner.py  test_functional.py  test_history.py  test_judge.py  test_metrics.py
evals/history/: runs.csv
meta_eval/: cross_judge.py  gold.jsonl  run.py  scores.json  stats.py  test_cross_judge.py  test_meta_eval.py  test_stats.py
shared/: cache.py  config.py  llm.py  test_cache.py
